--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@scullyio/scully": "^1.0.0",
     "emailjs-com": "^3.2.0",
     "ng-zorro-antd": "^12.0.1",
+    "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "typewriter-effect": "^2.18.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
