--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@scullyio/init": "^1.1.4",
     "@scullyio/ng-lib": "^1.0.0",
     "@scullyio/scully": "^1.0.0",
+    "@vimeo/player": "^2.16.1",
     "emailjs-com": "^3.2.0",
     "ng-zorro-antd": "^12.0.1",
-    "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "typewriter-effect": "^2.18.0",
